# daijingfu_backtrader

./: .env.example  .gitignore  CHANGELOG.md  DATA_SOURCE_SUPPORT.md  IMPLEMENTATION_REPORT.md  QUICK_TEST_GUIDE.md  README.md  TESTING_SUMMARY.md  TEST_REPORT.md  pyproject.toml  test_backtest.py  test_integration.py  test_jq_api.py  test_order_debug.py  test_positions.py  test_stockdata_compatibility.py
backend/: api_server.py  compat_shim_removal.patch  models.py  simple_provider_adapter_patch.patch  回测后端迁移计划.md
backend/backtest_origin/: main.py
backend/backtest_origin/modules/: README.md
backend/backup_20251017014642/backtest_origin/: models.py
backend/backup_20251017014642/jq_backtest/: __init__.py  engine.py  strategy.py
backend/data_provider/: __init__.py  simple_provider.py
backend/jq_backtest/: context.py  csv_adapter.py  data_api.py  data_provider_adapter.py  engine.py  main.py  models.py  order.py  portfolio.py  trading_api.py  trading_rules.py  utils.py
backend/jq_backtest/modules/: README.md  __init__.py
backend/modules/: __init__.py
docs/: jq_backtest_API_SPECIFICATION.md  jq_backtest_INTEGRATION_GUIDE.md  同步集成重要说明.md  数据配置快速指南.md  最终交付验证清单.md  聚宽回测模块_快速实施指南.md  聚宽回测模块_隔离开发方案.md
frontend/: index.html  package.json
frontend/src/: index.css  main.tsx
frontend/src/contexts/: DatasourceContext.tsx
frontend/src/lib/: api.ts
frontend/src/views/: JQBacktestWorkbench.tsx
interfaces/: __init__.py  backtest_service.py  data_provider.py
scripts/: generate_test_data.py  run_minibacktest.py  setup_env.sh  start_dev.sh
(+81 files in other folders)
